cuda memory models (constant, shared, local and atomic operations)

--- a/masters/HPC/Teoria/12.CUDA_2.md
+++ b/masters/HPC/Teoria/12.CUDA_2.md
@@ -232,5 +232,223 @@ void hostFunc(...)
 
 ```
 
+## Sincronizzazione tra Thread:  
 
+I thread sono indipendenti ma a volte devono collaborare (come nel tiling per caricare i dati), per farlo devono aspettarsi.  
+
+
+### Sincronizzazione in un blocco: 
+
+**`synchthreads()`** è una barriera fornita dal API di CUDA.  
+- ha scope limitato a singolo blocco, questa funzione sincronizza solamente i thread di un blocco (non sincronizza blocchi diversi).  
+- aspetta che **tutti** i thread dello stesso blocco la raggiungano, i thread che arrivano per primi rimangono in attesa degli altri
+- è inseribile all'interno di branch condizionali ma bisogna prestare particolare attenzione in questi casi, possiamo farlo solo se siamo sicuri che **tutti** i thread entrino nello stesso branch condizionale, altrimenti si crea un deadlock.  
+
+Esempio di utilizzo:
+
+```cpp
+__global__ void update_race(int* x, int* y)
+{
+    int i = threadIdx.x + blockDim.x * blockIdx.x;
+    if (i==0) *x = 1;
+    __synchthreads();
+    if (i==1) *y = *x;
+}
+
+// main.cu
+update_race<<<1,2>>>(d_x,d_y);
+```
+
+se non mettiamo la barriera di sincronizzazione avremo una race condition, il thread1 potrebbe eseguire prima del thread0 in quanto sono indipendenti.  
+
+
+**thread divergence e deadlocks**:  
+
+La thread divergence è quella che causa i deadlock, avviene quando mettiamo una barriera di sincronizzazione dentro un branch condizionale dentro al quale non entrano tutti i thread.  
+
+```cpp
+if (threadIdx.x < 16)
+{
+    myFunc_then();
+    __synchthreads();
+}else if{
+    myFunc_else();
+}
+```
+
+In questo esempio la prima metà dei thread entra nell'if e incontrano la barriera, quindi si fermano.  
+La seconda metà dei thread entra nell'else e finiscono l'esecuzione.  
+I thread che hanno incontrato la barriera rimangono bloccati per sempre in quanto gli altri thread non la raggiungeranno mai, si crea una situazione di stallo.  
+Il kernel va in timeout e viene ucciso dal driver!  
+
+### Sincronizzazione tra grid:
+
+CUDA non fornisce una barriera globale che fermi tutti i blocchi della griglia, per questioni di scalabilità hardware.  
+Se hai una GPU piccola, non tutti i blocchi stanno dentro gli SM, alcuni saranno in attesa e se il blocco 1 (attivo) deve aspettare il blocco $N$ che è in attesa si creerebbe un deadlock.  
+
+Per sincronizzare una grid si usa il **Kernel Split**:  
+Usiamo come barriera globale il kernel launch stesso, invece di usare un kernel unico dividiamo il lavoro in due kernel.  
+1. lanci kernel1
+2. il kernel1 finisce, esce dalla coda dello stream
+3. la memoria globale ora è consistente e aggiornata 
+4. lanci il kernel2 (che aveva bisogno del lavoro del kernel1)  
+
+
+```cpp
+update_x<<<<...>>>>(...); 
+/*  Barriera implicita tra i due lanci  */
+update_y<<<...>>>(...);
+```
+**Nota importante**:  
+Ricordiamo che lanciare un kernel è un'operazione asincrona, la CPU li lancia e poi riprende subito dopo il controllo.  
+La GPU disponde di stream di esecuzione, e kernel diversi all'interno dello stesso stream eseguono in modo serializzato, uno dietro l'altro!  
+Quindi quello che succede veramente è:
+
+1. CPU lancia kernel1, la CPU inserisce il comando 'esegui kernel1' in una coda (su uno stream) gestito dal driver.  
+2. CPU lancia kernel2, e inseriesce il comando 'esegui kernel2' nella stesas coda 
+3. La GPU guarda la coda:
+    - vede kernel1 in testa, lo esegue (e lo toglie dalla coda)
+    - mentre kernel1 esegue, kernel2 rimane in attesa e fermo 
+    - quando kernel1 finisce completamente e la memoria è salvata, la GPU torna a guardare la coda e vede kernel2 e lo fa partire 
+
+
+<br>
+
+### Sincronizzazione con operazioni atomiche:  
+
+Usiamo le funzioni atomiche quando più thread (di blocchi diversi) devono aggiornare un dato comunune.  
+**NON** servono a mettere in ordine i thread in termini di tempo ma a **proteggere** l'accesso ai dati.  
+
+Il classico problema è quello della _Race Condition_  
+
+```cpp
+__global__ void update(int*x)
+{
+    x = x + 1:
+}
+```
+
+Se abbiamo 128 thread tutti proveranno a incrementare la variaible globale x insieme, otteniamo un risultato sbagliato.  
+
+Questo esempio lo risolviamo con la `int atomicAdd(address, val)` 
+- blocca l'indirizzo di memoria 
+- legge il valore attuale 
+- somma val e scrive il risultato in modo atomico 
+- sblocca l'indirizzo
+
+_Nota:_ questa operazione restituisce un `int`, in particolare restituisce il valore vecchio che aveva la variabile prima dell'operazione atomica (utile se vogliamo ad esempio fare prendere a ogni thread un 'biglietto' )  
+
+**Funzioni CUDA per operazioni atomiche**:  
+- aritmetica: `add`, `sub`, `inc`, `dec`  
+- bitwise: `and`, `or`, `xor`
+- confronto: `min`, `max`
+- scambio: `exch`(swap), `cas` (compare and swap)  
+
+[Atomic functions in CUDA (docs)](https://docs.nvidia.com/cuda/cuda-c-programming-guide/#atomic-functions)
+
+Le operazioni di atomicExch e atomicCas sono i mattoni fondamentali per costruire qualsiasi altra struttura dati in modo thread safe.  
+
+
+### Performance of atomic operations: 
+
+È un concetto fondamentale quando si usano operazioni atomiche! bisogna essere molto consapevoli del fatto che le operazioni atomiche **NON sono gratis**.  
+
+Se 1000 thread fanno `atomicAdd` sullo stesso indirizzo l'hardware è costretto a serializzare le richieste, trasformiamo la GPU in una lenta macchina sequenziale.  
+
+La **best practice** prevede di creare copie locali al blocco e fare lavorare i thread sulla shared memory per assicurare velocità, solo alla fine mettiamo insieme tutti i pezzi insieme.  
+
+ES: Creazione di un istogramma  
+1. Ogni blocco si crea un istrogramma privato in shared memory 
+2. I thread del blocco usano operazioni atomiche veloci (in quanto in shared mem) per aggiornare il valore locale 
+3. solo alla fine, il blocco aggiorna l'istrogramma globale (in global memory RAM) 
+
+Questo riduce la contesa di un fattore pari alla dimensione del blocco!  
+
+
+<br>
+
+### Constan Memory  
+
+Riprendiamo il modello della memoria
+
+<center>
+
+![memory model](../../images/mem_model.png)
+
+</center>
+
+La **Constant Memory** è una regione speciale di memoria (limitata a 64KB) che è **ottimizzata** per dati che non cambiano durante l'esecuzione del kernel.    
+
+I dati della constant memory sono fisicamente lontani, è come se fossero in RAM, ma disponiamo di una piccola **constant cache** che è quella veloce che ci permette di ottenere speedup.  
+
+La constant memory è progettata per il caso in cui **tutti** i thread di un warp leggono lo stesso indirizzo contemporaneamente (es. variabili di formule, filtri per immagini).  
+È memoria NON modificabile, read-only.  
+
+
+La Constant Cache è un circuito single-port con una rete di distribuzione a ventaglio; ha 1 input ma può servire lo stesso valore a 32 thread diversi (aka broadcast).  
+Usiamo la constant cache per operazioni di tipo broadcast e read only perchè
+- risparmiamo banda L1: usare la constant cache per valori costanti di tipo broadcast mi permette di lasciare la L1 e la shared memory libere per caricare dati variabili!  
+- attenzione: la constant cache è ottima se tutti leggono in broadcast, ma diventa pessima se tutti i thread leggono indirizzi diversi! per quelle operazioni la L1 o shared memory sono le migliori.    
+
+
+**Allocazione e uso della constant memory**:  
+
+
+1. dichiarazione: si dichiara come variabile globale (fuori dal main) con la keyword `__constant__`, ha dimensione fissa statica, non possiamo fare malloc qui
+2. per la copia usiamo: `cudaMemcpyToSymbol()` non la cudaMemcpy normale 
+3. dentro al kernel la usiamo come una variabile globale, non va passata come argomento del kernel 
+
+
+```cpp
+__constant__ float P; // static 
+
+__global__ void kernel(float *a, int N)
+{
+    int idx = blockIdx.x * blockDim.x + threadIdx.x;
+    if (idx < N){
+        a[idx] = a[idx] * P;
+    }
+}
+
+int main(void)
+{
+    ... 
+    float Euro_dollar = 1.11;
+    cudaMemcpyToSymbol(P, &Euro_dollar, sizeof(Euro_dollar), cudaMemcpyHostToDevice);
+    ... 
+}
+```
+
+
+<br>
+
+### CUDA registers:   
+
+È la memoria più importante per il calcolo ad alte prestazioni.  
+Corrispondono alle variabili locali dentro il kernel, è memoria immediata, in assoluto la più veloce (0 cicli) ed è _privata_ per ogni thread.     
+
+**Register Pressure:**  
+Ogni SM ha un numero finito di registri, che vengono spartiti tra tutti i blocchi attivi.  
+
+- Più registri usa ogni thread $\rightarrow$ meno thread possono girare contemporaneamente sull'SM
+- Se usiamo troppi registri crolla l'Occupancy (numero di warp attivi) e aumenta la latenza di memoria
+
+Bisogna scrivere codice che usa il minor numero di variabili locali inutili per massimizzare le performance.  
+
+
+Il compilatore `nvcc` cerca di ottimizzare l'uso dei registri, possiamo aiutarlo con direttive speciali come `__launch_bounds__ (maxThreadsPerBlock, MinBlocksPerMultiprocessor)`
+
+
+
+### CUDA Local Memory:  
+
+La local memory è uno spazio della global memory (RAM lenta) che viene riservato privatamente per ogni thread.  
+
+Viene usata nel caso del **Register Spilling**:  
+- abbiamo register spilling quando usiamo troppe variabili locali e i registri fisici sono finiti. Il compilatore deve 'parcheggiare' le variabil extra in RAM (crolla performance).  
+
+Possiamo compilare il nostro codice con il flag `-ptxas-options=-v` per guardare se la local memory è stata usata.  
+
+
+penso ultima domanda. ma la constan memory è fisicamente in RAM (cioe vicino alla ram), e poi ho una cache di constant memory? cioè ho due componenti, quella grande in ram che contiene i dati e poi la cache che mi fa avere il boost di performance.  
 
