cuda UVM, sync and streams (overlapping)

--- a/masters/HPC/Teoria/13.CUDA_3.md
+++ b/masters/HPC/Teoria/13.CUDA_3.md
@@ -197,3 +197,181 @@ Gestire puntatori tra CPU e GPU è il problema più grande della programmazione 
 - le copie profonde (deep) richiedono tanto codice e gestione manuale degli indirizzi
 - l'alternativa zero-copy (pinned) è lenta    
 
+
+### UVM (unified virtual memory)  
+ 
+A partire da CUDA 6 è stata introdotta la UVM (unified virtual memory), che è una memoria speciale che permette a CPU e GPU di vedere gli stessi indirizzi.    
+UVM crea l'illusione che esista un solo blocco di mempria, accessibile sia da CPU che GPU.  
+
+Realtà Fisica $\rightarrow$ sotto il cofano ci sono le due memorie sperate (RAM e VRAM), UVM è un trucco sw che nasconde questa separazione.  
+
+Se il programmatore usa UVM allora per lui esisterà solo la "Unified Memory", allocherà spazio senza preoccuparsi. UVM sposterà i dati avanti e indietro attraverso il bus PCIe, senza che ci sia il bisogno d scrivere le `cudaMemcpy`.   
+
+Per usare la UVM si usa: `cudaMallocManaged()`.   
+
+Risolve il problema delle deep copy e semplifica enormemente la sintassi e la scrittura di codice ma questa astrazione della memoria ha **conseguenze disastrose** per le performance.    
+
+**Meccanismo della UVM:**    
+La meccanica di trasferimento dei dati è basata sul concetto di Page Fault.  
+Prendiamo il seguente scenario: Allochiamo un array in UVM  
+
+- Host: la CPU scrive i dati iniziali (i dati risiedono fisicamente nella RAM del host)  
+- Kernel launch: lanciamo il kernel sulla GPU  
+    - la GPU prova a leggere l'array **MA** il dato è fisicamente nella RAM del host
+    - la GPU genera un **page fault** e si ferma 
+    - interviene il driver che copia la pagina di memoria dalla RAM alla VRAM attraverso il cavo PCIe (lento)
+- Finisce il Kernel e la CPU prova a leggere i risultati
+    - i dati sono fisicamente nella VRAM
+    - la CPU genera un **page fault**, interviene nuovamente il driver che copia nuovamente i dati da GPU a CPU 
+
+Concetto chiave: i dati **MIGRANO** fisicamente, si spostano quando serve 
+
+Il problema della UVM è che fa tanti piccoli trasferimenti!  
+Con cudaMemcpy manuale possiamo spostare l'intero array (es. 100MB) in un colpo singolo facendo lavorare il bus PCIe alla massimo della banda.  
+Con UVM i dati vengono spostati **pagina per pagina** (es. 4KB alla volta), significa pagare tante volte la **latenza**.   
+Il sistema deve anche generare traffico di coerenza per sapere chi ha la pagina e se è sporca.  
+
+<br>
+
+### Asychronous data transfers 
+
+L'obiettivo è quello di migliorare le performance nascondendo i tempi morti, vogliamo ottenere due livelli di sovrapposizione (overlap):  
+
+1. Host-to-Device: vogliamo che la CPU lavori mentre i dati vengono copiati sulla GPU
+2. Intra-Device: vogliamo che la GPU esegua un kernel mentre altri dati stanno arrivando o partendo (usare il DMA engine e il compute engine contemporaneamente)   
+
+
+**`cudaMemcpyAsync()`**   
+
+Fino ad ora abbiamo usato la `cudaMemcpy` che però è **bloccante**: la CPU lancia il comando e dorme finchè la copia non è finita.   
+
+La soluzione è usare `cudaMemcpyAsync`  
+- È asincrona (non-blocking): la funzione attiva il driver che inizia a copiare e restituisce subito il controllo alla CPU
+- la CPU è libera di fare altro (preparare il prossimo buffer, lanciare un altro kernel)  
+
+REQUISITI:
+1. **Pinned memory**: la memoria Host deve essere bloccata  
+    Se usiamo memoria pageable il driver deve fare una copia extra e usare uno staging buffer in pinned memory, questa copia la deve fare la CPU il che la bloccherebbe impedendo di ritornare subito!  
+    Se la memoria è già pinned il driver passa passa l'indirizzo al DMA e ritorna subito, il DMA farà la copia 
+2. **Streams**: dobbiamo usare flussi di esecuzione diversi 
+
+
+Le API asincrone:  
+
+- `cudaMallocHost()`: alloca memoria pinned sull'host 
+- `cudaFreeHost()`: de-alloca memoria pinnata sull'host 
+- `cudaHostRegister()`: trasforma un'area di memoria pageable in una pinnata
+- `cudaHostUnregister`: trasforma un area pinnata in una normale pageable  
+
+
+
+Esempio codice asincrono
+
+```cpp
+// allochiamo memoria pinnata su host 
+cudaMallocHost((void**)&a, nbytes);
+// allochiamo memoria su GPU 
+cudaMalloc((void**)&d_a, nbytes);
+
+// copie asincrone e lancio del kernel
+cudaMemcpyAsync(d_a, a, nbytes, cudaMemcpyHostToDevice, 0);
+kernel<<<blocks, threads, 0, 0>>>(d_a);
+cudaMemcpyAsync(a, d_a, nbytes, cudaMemcpyDeviceToHost, 0);
+
+// VANTAGGIO: eseguiamo codice CPU mentre esegue il kernel!
+// ps: deve essere indipendente dal kerel
+f();
+
+// aspettiamo che le operazioni su GPU siano finite
+cudaDeviceSynchronize();
+```
+
+- quando l'host fa `cudaMemcpyAsync` riprende il controllo subito, il trasferimento inizia in background su uno specifico stream 
+- l'host, mentre la copia sta avvenendo lancia il kernel sullo stesso stream della copia asincrona $\rightarrow$ il kernel viene messo nella coda dello stream e verrà lanciato una volta che l'operazione che lo precede nella coda finisce (ossia la copia asincrona)
+- l'host una volta lanciato il kernel riprende il controllo subito e lancia l'altra copia asincrona che viene messa in coda nello stesso stream, verrà eseguita una volta che il kernel termina  
+- l'host è libero mentre il driver fa le copie e la GPU esegue il kernel, è qui il vero vantaggio, la CPU può eseguire `f()` che deve essere indipendente dai dati del kernel ovviamente 
+- alla fine sincronizziamo tutto con `cudaDeviceSynchronize` per assicurarci che CPU e GPU abbiano finito entrambi le loro operazoni.  
+
+
+<br>
+
+### CUDA Streams   
+
+Uno stream non è altro che una coda **FIFO** (first-in-first-out) di comandi, la regola interna a uno stream è che i comandi messi nello stesso stream vengono eseguiti in ordine **sequenziale**.  
+- se in uno stream mettiamo: copy $\rightarrow$ kernel $\rightarrow$ la GPU non inizia il kernel fino a quando la prima copia non finisce, e non esegue l'ultima copia fino a quando il kernel non termina.  
+
+
+**Default stream (0)**:   
+Se non specifichiamo nulla, tutto finisce nello stream 0, che è quello di defualt.   
+Lo stream 0 è **fortemente sincronizzante**, nessuna operazione in altri stream può avvenire mentre lo stream 0 sta lavorando.  
+
+Per avere overlapp effettivo dobbiamo usare più stream e creare più code 
+
+<center>
+
+![cuda streams overlap](../../images/cuda_streams_ol.png)  
+
+</center>
+
+- I comandi dello stream0 e stream1 sono indipendenti, il driver può eseguire la Memcpy dello stream1 mentre il kernel dello stream0 sta girando  
+
+
+### Synchronization  
+
+Per gestire i flussi paralleli serve sincronizzazione, esistono due tipi di sincronizzazione:  
+
+1. **Sincronizzazione Esplicita**:  
+    - `cudaDeviceSynchronize()`: aspetta tutto e tutti, è la più pesante e di grana grossa
+    - `cudaStreamSynchronize(stream_x)`: aspetta solo che lo stream specificato termini
+    - `cudaStreamWaitEvent(stream_x, event)`: è un modo per fare aspettare uno stream rispetto ad un altro direttamente sulla GPU, ogni comando sullo stream_x aspetta che l'evento sia eseguito
+
+<br>
+
+2. **Sincronizzazione Implicita**:
+    - Qualsiasi comando sullo stream di default 
+    - Allocare memoria (cudaMalloc) e copiare memoria (cudaMemcpy) bloccano tutti gli stream  
+    - *attenzione:* queste operazioni bloccano tutto di 'nascosto', potrebbero rovinare le performance degli stream! se vogliamo ottimizzare l'uso di stream per andare veloce allora non usare mai lo stream di default e alloca tutta la memoria all'inizio.  
+
+
+**Stream API**:  
+- `cudaStream_t stream`: il tipo di dato, è un puntatore a uno stream
+- `cudaStreamCreate(&stream)`: crea lo stream e la coda 
+- `cudaStreamDestroy(&stream)`: distrugge lo stream e la coda  
+
+
+Esempio di codice con gli stream:  
+
+```cpp
+// creazione di due stream indipendenti 
+cudaStream_t stream[2];
+cudaStreamCreate(&stream[0]);
+cudaStreamCreate(&stream[1]);
+
+// copia ed eseguiamo il kernel in modo asincrono!  
+cudaMemcpyAsync(d_a, a, nbytes/4, cudaMemcpyHostToDevice, stream[0]);
+kernel<<<blocks, threads, 0, stream[0]>>>(d_a, value);
+cudaMemcpyAsync(a, d_a, nbytes/4, cudaMemcpyDeviceToHost, stream[0]);
+
+cudaMemcpyAsync(d_a+offset, a+offeset, nbytes/4, cudaMemcpyHostToDevice, stream[1]);
+kernel<<<blocks, threads, 0, stream[1]>>>(d_a+offset, value);
+cudaMemcpyAsync(a+offset, d_a+offset, nbytes/4, cudaMemcpyDeviceToHost, stream[1]);
+
+//run CPU code
+f();
+
+// aspettiamo che i due kernel finiscano e distruggiamo gli stream creati
+cudaDeviceSynchronize();
+cudaStreamDestroy(stream[0]);
+cudaStreamDestroy(stream[1]);
+```
+
+note:
+- il 4o parametro del kernel è lo stream!  
+- cosa succede: il driver vede i due stream indipendenti e proverà a incastrare le operazioni di copia dello stream1 mentre lo stream0 sta eseguendo il kernel (DMA engine e compute engine lavorano in parallelo) $\rightarrow$ otteniamo l'overlap perfetto!   
+
+
+<br>
+
+
+### Double Buffering  
+
