double buffering and apron effect when slicing

--- a/masters/HPC/Teoria/13.CUDA_3.md
+++ b/masters/HPC/Teoria/13.CUDA_3.md
@@ -373,5 +373,85 @@ note:
 <br>
 
 
-### Double Buffering  
+### Double Buffering 
+
+Ricordiamo che SM e copy engine (DMA) sono due circuiti fisici separati, se usiamo gli stream possiamo accenderli entrambi contemporaneamente.  
+
+<center>
+
+![double buffering](../../images/d_buffering.png)
+
+
+</center>
+
+
+Nel riquadro in alto abbiamo un caso di single buffering:
+    - transfer $\rightarrow$ kernel $\rightarrow$ transfer
+
+Nel riquadro in basso abbiamo lo stesso caso ma usando il **double buffering**:
+    - creiamo 4 stream (T1,T2,T3,T4)
+    - stream1: inizial il trasferimento
+    - stream2: appena stream1 finisce il trasferimento e inizia il suo kernel, lo stream2 inizia il suo trasferimento!
+    - *risultato*: saturiamo il bus PCIe e gli SM, lavorano insieme.  
+
+
+Esempio di codice con Double Buffering:  
+
+```cpp
+/*Reminder*/
+cudaError_t cudaMemcpyAsync (
+    void*                   dst,
+    const void*             src,
+    size_t                  count,
+    enum cudaMemcpyKind     kind,
+    cudaStream_t            stream
+)
+
+// main.cu 
+
+cudaStream_t stream[4];
+
+for(int i=0; i<4; i++)
+    cudaStreamCreate(&stream[i]);
+
+float* hPtr, *d_inp, *d_out;
+cudaMallocHost((**void)&hPtr, 4*size);
+cudaMalloc((void**)&d_inp, 4*size);
+cudaMalloc((void**)&d_out, 4*size);
+
+for(int i=0; i<4; i++)
+{
+    cudaMemcpyAsync(d_inp+i*size, hPtr+i*size, size, cudaMemcpyHostToDevice, stream[i]);
+    myKernel<<<100,512,0,stream[i]>>>(d_out+i*size, d_inp+i*size, size);
+    cudaMemcpyAsync(hPtr+i*size, d_out+i*size, size, cudaMemcpyDeviceToHost, stream[i]):
+}
+
+cudaDeviceSynchronize();
+for(int i=0;i<4;i++)
+    cudaStreamDestroy(&stream[i]);
+```
+
+
+**Quando usare il double buffering:**   
+
+Ci sono situazioni dove complicarsi la vita con il double buffering è conveniente 
+
+1. **Global Algorthm on Streams**(video processing):  
+    - es. un filmato; ogni frame è indipendente quindi mentre la GPU elabora il frame1 (applica filtro colore), possiamo caricare il frame2 e scaricare il frame0.  
+    - zero dipendenze, è lo scenario perfetto.  
+
+2. **Local Algoruthms (Image filtering/ tiling)**:  
+    - Quando abbiamo un immagine gigante (troppo grande per la GPU) o quando vogliamo sfrtuttare al massimo il parallelismo. Dividiamo l'input in pezzi (tiles) ed elaboriamo in parallelo i vari pezzi su stream diversi.  
+    - *problema:* in questo caso abbiamo del *dipendenze ai bordi!*  
+
+
+**Apron( halo/ghost cells)**:   
+
+Se stiamo applicando un filtro a un'immagine, per calcolare il valore di un pixel abbiamo bisogno dei suoi vicini.  
+Considerando il fatto che stiamo tagliando l'immagine in slices, per elaborare le righe al limite della slice dobbiamo guardare anche la prima riga della slice successiva!  
+
+La soluzione è quella di trasferire le slices con un bordo di sovrapposizione:
+- invece di copiare le righe 0-50, copiamo le righe 0-51.  
+- la riga 51 serve solo come input ed è *read-only*, serve solo a calcolare la riga 50 
+- sacrifichiamo un minimo di banda per permettere il pipelining.  
 
