accelerated computing on GPU files moved

--- a/masters/HPC/Teoria/12.CUDA_2.md
+++ b/masters/HPC/Teoria/12.CUDA_2.md
@@ -40,7 +40,7 @@ Possiamo creare dati in global memory in 2 modi:
 Il modo di accedere alla global memory impatta la **performance**.  
 Esistono due tipi di accesso:
 - **offset access**: I thread leggono dati consecutivi ma spostati in avanti.  
-    - avviene quello che si definisce come **coalescence**: la GPU vede che titti i thread chiedono dati vicini, fa un unica richiesta grossa alla memoria (es. pacchetto da 128Byte); massima efficienza.  
+    - avviene quello che si definisce come **coalescence**: la GPU vede che tutti i thread chiedono dati vicini, fa un unica richiesta grossa alla memoria (es. pacchetto da 128Byte); massima efficienza.  
 
 - **stride access**: i thread leggono dati distanziati (es: th0 legge idx0, th1 legge idx2, th2 legge idx4, ...)  
     - qui nasce un **problema**: i dati richiesti non sono vicini (soprattutto per stride larghi), non stanno nello stesso pacchettoda 128Byte; la GPU è costretta a fare tante piccole richieste separate, la banda crolla.  
@@ -95,7 +95,7 @@ La load avviene attraverso 3 passaggi:
 ES: Abbiamo le seguenti istruzioni con la load  
 ```cpp
 int i = threadIdx.x;
-float x = aA[i];
+float x = A[i];
 ```
 
 L'istruzione è unica ma viene eseguita (ovviamente) come SIMT, quindi:
@@ -301,7 +301,7 @@ update_y<<<...>>>(...);
 ```
 **Nota importante**:  
 Ricordiamo che lanciare un kernel è un'operazione asincrona, la CPU li lancia e poi riprende subito dopo il controllo.  
-La GPU disponde di stream di esecuzione, e kernel diversi all'interno dello stesso stream eseguono in modo serializzato, uno dietro l'altro!  
+La GPU dispone di stream di esecuzione, e kernel diversi all'interno dello stesso stream eseguono in modo serializzato, uno dietro l'altro!  
 Quindi quello che succede veramente è:
 
 1. CPU lancia kernel1, la CPU inserisce il comando 'esegui kernel1' in una coda (su uno stream) gestito dal driver.  
@@ -451,4 +451,6 @@ Possiamo compilare il nostro codice con il flag `-ptxas-options=-v` per guardare
 
 
 penso ultima domanda. ma la constan memory è fisicamente in RAM (cioe vicino alla ram), e poi ho una cache di constant memory? cioè ho due componenti, quella grande in ram che contiene i dati e poi la cache che mi fa avere il boost di performance.  
+
+
 
