--- a/masters/HPC/Teoria/13.CUDA_3.md
+++ b/masters/HPC/Teoria/13.CUDA_3.md
@@ -18,6 +18,10 @@ Notiamo che il *problema* e collo di bottiglia è prorpio la comunicazione tra C
 
 - ogni volta che lanciamo un Kernel , dobbiamo spostare i dati di input e poi recuperare l'output ! dobbiamo trovare un modo per ottimizzare questo passaggio critico.  
 
+
+
+<br>
+
 **Conflitto delle memorie**:    
 la CPU (host) usa la **memoria virtuale** mentre la GPU usa **indirizzi fisici**  
 
@@ -37,7 +41,7 @@ La memoria virutale è un illusione creata dal Sistema Operativo (OS) e dall'Har
 
 </center>
 
-I blocchi a sinistra è la virtual memory, ogni processo la vede come contigua.  
+I blocchi a sinistra sono la virtual memory, ogni processo la vede come contigua.  
 Le frecce nere sono il mapping che fa l'OS tra memoria virtuale e memoria fisica, non saranno tutti contigui e uno dietro l'altro!  
 
 ### Address Translation  
@@ -80,7 +84,7 @@ Quando vogliamo copiare l'array `A` dalla RAM alla VRAM della GPU il DMA va in c
 **Nota: Page Table**    
 
 - È una struttura dati salvata nella RAM
-    - Ogni processo ha la sua page table perssonale
+    - Ogni processo ha la sua page table personale
 
 - la MMU è l'hardware (chip fisico) che legge le page table dei vari processi
     - l'OS quando cambia processo in esecuzione (context switch) dice alla MMU quale page table guardare per tradurre gli indirizzi.  
